refactor code and styling

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -99,9 +99,10 @@ p {
         display: flex;
         justify-content: center;
         flex-direction: column;
+      line-height: 30px;
     }
 
-    .text1 {
+    .aboutMe-Text {
 
         display: flex;
         justify-content: center;
