--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="toggle-container">
       <div class="toggle-logo">
-        <img (click)="this.darkMode.toggleDarkTheme()" src="assets/img/strormtrooper.png">
+        <img (click)="darkModeService.toggleDarkMode()" src="assets/img/strormtrooper.png" alt="">
       </div>
     </div>
   </div>
