--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -11,13 +11,14 @@
         </div>
     </div>
     <div class="textArea" id="textBox">
-        <div class="text1">
-            <p>Hello Im Max, I started my career as a software developer in November 2021 at Startup Werk. 
-                <br>
-                Since that time I have been developing web applications for and with our cooperation partners. 
-                <br>
-                Since 2023 I have also been working as a Scrum Master to expand and optimize processes for my Team.</p>
-        </div>
+        <div class="aboutMe-Text">
+          <p>
+            Allow me to introduce myself - I am Max, a dedicated professional in the realm of software development. My journey commenced in November 2021 when I embarked on my career at Startup Werk. Over the years, I have honed my expertise in crafting top-notch web applications, collaborating harmoniously with our esteemed cooperation partners.
+            In addition to my role as a software developer, I have taken on the responsibilities of a Scrum Master since April 2023. This new role has enabled me to spearhead the expansion and optimization of processes within my team, ensuring that we operate at the pinnacle of efficiency and productivity.
+            I take immense pride in my ability to tackle complex challenges, adapt to dynamic environments, and foster a collaborative work culture. With a relentless passion for innovation and a keen eye for detail, I consistently strive to deliver exceptional results and contribute to the growth and success of the projects I undertake.
+            Looking forward to engaging with like-minded professionals and exploring new opportunities in the ever-evolving business landscape.
+          </p>
+         </div>
     </div>
 </div>
 
