--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,7 +4,7 @@ header {
   left: 0;
   z-index: 1;
 
-  .logo {
+  .logo p {
     justify-content: flex-start;
     font-size: 53px;
     background: linear-gradient(89.81deg, #9845E8 -1.72%, #33D2FF 54.05%, #DD5789 99.78%);
