--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,103 +1,75 @@
 <!--===== SKILLS =====-->
 <section class="skills-section" id="skills">
-    <h2 class="section-title">Skills</h2>
-    <div class="skillscontainer">
-        <div class="container1">
-            <p class="skills-text"></p>
-            <div class="skills-data">
-                <div class="skills-names">
-                    <div class="skill-image"><img src="assets/img/java script.png"></div>
-                    <p class="skills-name">HTML5</p>
-                </div>
-                <div>
-                    <p class="skills-percentage"></p>
-                </div>
-            </div>
-            <div class="skills-data">
-                <div class="skills-names">
-                    <div class="skill-image"><img src="assets/img/css.png"></div>
-                    <p class="skills-name">CSS3</p>
-                </div>
-                <div class="skills-bar skills-css"></div>
-                <div>
-                    <p class="skills-percentage"></p>
-                </div>
-            </div>
-            <div class="skills-data">
-                <div class="skills-names">
-                    <div class="skill-image"><img src="assets/img/js.png"></div>
-                    <p class="skills-name">JAVASCRIPT</p>
-                </div>
-                <div class="skills-bar skills-js">
-
-                </div>
-                <div>
-                    <p class="skills-percentage"></p>
-                </div>
-            </div>
-            <div class="skills-data">
-                <div class="skills-names">
-                    <div class="skill-image"><img src="assets/img/angular.png"></div>
-                    <p class="skills-name">Angular</p>
-                </div>
-                <div class="skills-bar skills-angular">
-
-                </div>
-                <div>
-                    <p class="skills-percentage"></p>
-                </div>
-            </div>
-        </div>
-
-        <div class="container2">
-            <p class="skills-text"></p>
-            <div class="skills-data">
-                <div class="skills-names">
-                    <div class="skill-image"><img src="assets/img/Git-Icon-1788C 2.png"></div>
-                    <p class="skills-name">GIT</p>
-                    <div class="skills-bar skills-html"></div>
-
-
-                </div>
-                <div>
-                    <p class="skills-percentage"></p>
-                </div>
-            </div>
-            <div class="skills-data">
-                <div class="skills-names">
-                    <div class="skill-image"><img src="assets/img/icons8-rest-api-80 2.png"></div>
-                    <p class="skills-name">Rest API</p>
-                </div>
-                <div class="skills-bar skills-css"></div>
-                <div>
-                    <p class="skills-percentage"></p>
-                </div>
-            </div>
-            <div class="skills-data">
-                <div class="skills-names">
-                    <div class="skill-image"><img src="assets/img/Group 226.png"></div>
-                    <p class="skills-name">SCRUM</p>
-                </div>
-                <div class="skills-bar skills-js">
-
-                </div>
-                <div>
-                    <p class="skills-percentage"></p>
-                </div>
-            </div>
-            <div class="skills-data">
-                <div class="skills-names">
-                    <div class="skill-image"><img src="assets/img/database-5-64.png"></div>
-                    <p class="skills-name">Database</p>
-                </div>
-                <div class="skills-bar skills-angular">
-
-                </div>
-                <div>
-                    <p class="skills-percentage"></p>
-                </div>
-            </div>
-        </div>
+  <h2 class="section-title">Skills</h2>
+  <div class="skills-container">
+    <div class="skill">
+      <div class="skill-image"><img src="assets/img/java script.png" alt="HTML5"></div>
+      <p class="skills-name">HTML5</p>
+      <div class="skills-bar skills-html"></div>
+      <span class="skills-percentage"></span>
     </div>
-</section>
 
+    <div class="skill">
+      <div class="skill-image"><img src="assets/img/css.png" alt="CSS3"></div>
+      <p class="skills-name">CSS3</p>
+      <div class="skills-bar skills-css"></div>
+      <span class="skills-percentage"></span>
+    </div>
+
+    <div class="skill">
+      <div class="skill-image"><img src="assets/img/js.png" alt="JavaScript"></div>
+      <p class="skills-name">JavaScript</p>
+      <div class="skills-bar skills-js"></div>
+      <span class="skills-percentage"></span>
+    </div>
+
+    <div class="skill">
+      <div class="skill-image"><img src="assets/img/angular.png" alt="Angular"></div>
+      <p class="skills-name">Angular</p>
+      <div class="skills-bar skills-angular"></div>
+      <span class="skills-percentage"></span>
+    </div>
+
+    <div class="skill">
+      <div class="skill-image"><img src="assets/img/Git-Icon-1788C 2.png" alt="GIT"></div>
+      <p class="skills-name">GIT</p>
+      <div class="skills-bar skills-html"></div>
+      <span class="skills-percentage"></span>
+    </div>
+
+    <div class="skill">
+      <div class="skill-image"><img src="assets/img/icons8-rest-api-80%202.png" alt="Rest API"></div>
+      <p class="skills-name">Rest API</p>
+      <div class="skills-bar skills-css"></div>
+      <span class="skills-percentage"></span>
+    </div>
+
+    <div class="skill">
+      <div class="skill-image"><img src="assets/img/Group%20226.png" alt="SCRUM"></div>
+      <p class="skills-name">SCRUM</p>
+      <div class="skills-bar skills-js"></div>
+      <span class="skills-percentage"></span>
+    </div>
+
+    <div class="skill">
+      <div class="skill-image"><img src="assets/img/firebase.png" alt="Database"></div>
+      <p class="skills-name">Firebase</p>
+      <div class="skills-bar skills-angular"></div>
+      <span class="skills-percentage"></span>
+    </div>
+
+    <div class="skill">
+      <div class="skill-image"><img src="assets/img/2048px-GraphQL_Logo.svg.png" alt="Database"></div>
+      <p class="skills-name">GraphQl</p>
+      <div class="skills-bar skills-angular"></div>
+      <span class="skills-percentage"></span>
+    </div>
+
+    <div class="skill">
+      <div class="skill-image"><img src="assets/img/ph424p5c6-php-logo-php-logo-transparent-png-stickpng-removebg-preview.png" alt="Database"></div>
+      <p class="skills-name">PHP</p>
+      <div class="skills-bar skills-angular"></div>
+      <span class="skills-percentage"></span>
+    </div>
+  </div>
+</section>
