--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -71,5 +71,19 @@
       <div class="skills-bar skills-angular"></div>
       <span class="skills-percentage"></span>
     </div>
+
+    <div class="skill">
+      <div class="skill-image"><img src="assets/img/0e0f44e4-8de2-49c9-b8f0-406ece8fd1b6-cover-removebg-preview.png" alt="Database"></div>
+      <p class="skills-name">Figma</p>
+      <div class="skills-bar skills-angular"></div>
+      <span class="skills-percentage"></span>
+    </div>
+
+    <div class="skill">
+      <div class="skill-image"><img src="assets/img/bootstrap-logo-removebg-preview.png" alt="Database"></div>
+      <p class="skills-name">Bootstrap</p>
+      <div class="skills-bar skills-angular"></div>
+      <span class="skills-percentage"></span>
+    </div>
   </div>
 </section>
