--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,4 +15,10 @@ a {
   font-family: 'Quicksand', sans-serif;
   font-family: 'Roboto Condensed', sans-serif;
 }
+h3 {
+  font-family: 'Lato', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Quicksand', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
+}
 
