--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -108,6 +108,7 @@ p {
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        padding-top: 20px;
 
     }
 
