--- a/src/app/headline/headline.component.html
+++ b/src/app/headline/headline.component.html
@@ -1,6 +1,6 @@
 <section class="headline-container" id="home">
     <div class="headline-title-container">
-        <h1>Hi I'm</h1>
+        <h1 class="headline">Hi I'm</h1>
         <p class="name">Max Kraemer</p>
     </div>
 </section>
