change gsap for header and headline

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
   <div class="header-container">
     <div class="logo-container">
       <div class="logo">
-        <p>MK</p>
+        <p id="logo">MK</p>
       </div>
     </div>
     <div class="header-link">
@@ -14,7 +14,7 @@
     </div>
     <div class="toggle-container">
       <div class="toggle-logo">
-        <img (click)="darkModeService.toggleDarkMode()" src="assets/img/strormtrooper.png" alt="">
+        <img (click)="darkModeService.toggleDarkMode()" src="assets/img/strormtrooper.png" alt="" id="starWarsImg">
       </div>
     </div>
   </div>
