--- a/src/app/headline/headline.component.html
+++ b/src/app/headline/headline.component.html
@@ -1,9 +1,9 @@
 <section class="headline-container" id="home">
     <div class="headline-title-container">
-        <h1 class="headline">Hi I'm</h1>
-        <p class="name">Max Kraemer</p>
+        <h1 class="headline" id="headline">Hi I'm</h1>
+        <p class="name" id="name">Max Kraemer</p>
     </div>
 </section>
 <div>
-    <p>I write about building profitable web applications as a developer and lead as a future Scrum Master</p>
+    <p id="content">I write about building profitable web applications as a developer and lead as a future Scrum Master</p>
 </div>
