gsap animation for skills

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -3,85 +3,85 @@
   <h2 class="section-title">Skills</h2>
   <div class="skills-container">
     <div class="skill">
-      <div class="skill-image"><img src="assets/img/java script.png" alt="HTML5"></div>
-      <p class="skills-name">HTML5</p>
+      <div class="skill-image"><img src="assets/img/java script.png" alt="HTML5" id="skill-image"></div>
+      <p class="skills-name" id="skill-name">HTML5</p>
       <div class="skills-bar skills-html"></div>
       <span class="skills-percentage"></span>
     </div>
 
     <div class="skill">
-      <div class="skill-image"><img src="assets/img/css.png" alt="CSS3"></div>
-      <p class="skills-name">CSS3</p>
+      <div class="skill-image"><img src="assets/img/css.png" alt="CSS3" id="skill-image"></div>
+      <p class="skills-name" id="skill-name">CSS3</p>
       <div class="skills-bar skills-css"></div>
       <span class="skills-percentage"></span>
     </div>
 
     <div class="skill">
-      <div class="skill-image"><img src="assets/img/js.png" alt="JavaScript"></div>
-      <p class="skills-name">JavaScript</p>
+      <div class="skill-image"><img src="assets/img/js.png" alt="JavaScript" id="skill-image"></div>
+      <p class="skills-name" id="skill-name">JavaScript</p>
       <div class="skills-bar skills-js"></div>
       <span class="skills-percentage"></span>
     </div>
 
     <div class="skill">
-      <div class="skill-image"><img src="assets/img/angular.png" alt="Angular"></div>
-      <p class="skills-name">Angular</p>
+      <div class="skill-image"><img src="assets/img/angular.png" alt="Angular" id="skill-image"></div>
+      <p class="skills-name" id="skill-name">Angular</p>
       <div class="skills-bar skills-angular"></div>
       <span class="skills-percentage"></span>
     </div>
 
     <div class="skill">
-      <div class="skill-image"><img src="assets/img/Git-Icon-1788C 2.png" alt="GIT"></div>
-      <p class="skills-name">GIT</p>
+      <div class="skill-image"><img src="assets/img/Git-Icon-1788C 2.png" alt="GIT" id="skill-image"></div>
+      <p class="skills-name" id="skill-name">GIT</p>
       <div class="skills-bar skills-html"></div>
       <span class="skills-percentage"></span>
     </div>
 
     <div class="skill">
-      <div class="skill-image"><img src="assets/img/icons8-rest-api-80%202.png" alt="Rest API"></div>
-      <p class="skills-name">Rest API</p>
+      <div class="skill-image"><img src="assets/img/icons8-rest-api-80%202.png" alt="Rest API" id="skill-images"></div>
+      <p class="skills-name" id="skill-name">Rest API</p>
       <div class="skills-bar skills-css"></div>
       <span class="skills-percentage"></span>
     </div>
 
     <div class="skill">
-      <div class="skill-image"><img src="assets/img/Group%20226.png" alt="SCRUM"></div>
-      <p class="skills-name">SCRUM</p>
+      <div class="skill-image"><img src="assets/img/Group%20226.png" alt="SCRUM" id="skill-images"></div>
+      <p class="skills-name" id="skill-name">SCRUM</p>
       <div class="skills-bar skills-js"></div>
       <span class="skills-percentage"></span>
     </div>
 
     <div class="skill">
-      <div class="skill-image"><img src="assets/img/firebase.png" alt="Database"></div>
-      <p class="skills-name">Firebase</p>
+      <div class="skill-image"><img src="assets/img/firebase.png" alt="Database" id="skill-images"></div>
+      <p class="skills-name" id="skill-name">Firebase</p>
       <div class="skills-bar skills-angular"></div>
       <span class="skills-percentage"></span>
     </div>
 
     <div class="skill">
-      <div class="skill-image"><img src="assets/img/2048px-GraphQL_Logo.svg.png" alt="Database"></div>
-      <p class="skills-name">GraphQl</p>
+      <div class="skill-image"><img src="assets/img/2048px-GraphQL_Logo.svg.png" alt="Database" id="skill-images"></div>
+      <p class="skills-name" id="skill-name">GraphQl</p>
       <div class="skills-bar skills-angular"></div>
       <span class="skills-percentage"></span>
     </div>
 
     <div class="skill">
-      <div class="skill-image"><img src="assets/img/ph424p5c6-php-logo-php-logo-transparent-png-stickpng-removebg-preview.png" alt="Database"></div>
-      <p class="skills-name">PHP</p>
+      <div class="skill-image"><img src="assets/img/ph424p5c6-php-logo-php-logo-transparent-png-stickpng-removebg-preview.png" alt="Database" id="skill-images"></div>
+      <p class="skills-name" id="skill-name">PHP</p>
       <div class="skills-bar skills-angular"></div>
       <span class="skills-percentage"></span>
     </div>
 
     <div class="skill">
-      <div class="skill-image"><img src="assets/img/0e0f44e4-8de2-49c9-b8f0-406ece8fd1b6-cover-removebg-preview.png" alt="Database"></div>
-      <p class="skills-name">Figma</p>
+      <div class="skill-image"><img src="assets/img/0e0f44e4-8de2-49c9-b8f0-406ece8fd1b6-cover-removebg-preview.png" alt="Database" id="skill-images"></div>
+      <p class="skills-name" id="skill-name">Figma</p>
       <div class="skills-bar skills-angular"></div>
       <span class="skills-percentage"></span>
     </div>
 
     <div class="skill">
-      <div class="skill-image"><img src="assets/img/bootstrap-logo-removebg-preview.png" alt="Database"></div>
-      <p class="skills-name">Bootstrap</p>
+      <div class="skill-image"><img src="assets/img/bootstrap-logo-removebg-preview.png" alt="Database" id="skill-images"></div>
+      <p class="skills-name" id="skill-name">Bootstrap</p>
       <div class="skills-bar skills-angular"></div>
       <span class="skills-percentage"></span>
     </div>
