delete contact and implement gsap for portfolio

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,29 +1,32 @@
 <section class="port-section" id="portfolio">
   <h2 class="port-title">Featured projects</h2>
-  <div class="port-container">
-    <div class="port-img mg-32">
+    <div class="port-container">
       <a href="http://maximilian-kraemer.developerakademie.com/ElPollo/index.html" target="_blank">
-        <img src="assets/img/Bildschirmfoto 2023-07-19 um 12.23.05.png">
+        <img class="loco-img" src="assets/img/Bildschirmfoto 2023-07-19 um 12.23.05.png" id="port-img">
       </a>
-      <p>El Pollo Loco: is an exciting JavaScript game where you beat a flying chicken, navigate through obstacles, collect points, and conquer the highscore leaderboard. Immerse yourself in this fast-paced chicken adventure!</p>
+      <div class="port-text" id="port-text">
+        <p>El Pollo Loco: is an exciting JavaScript game where you beat a flying chicken, <br> navigate through obstacles, collect points, and conquer the highscore leaderboard. Immerse yourself in this fast-paced chicken adventure!</p>
+      </div>
     </div>
-    <div class="port-img">
+
+    <div class="port-container">
+        <div class="port-text" id="port-text">
+          <p>Join: A powerful JavaScript-based CRM system tailored for businesses. Streamline customer relationships, track interactions, and manage sales effortlessly. Unlock your company's potential with JoinCRM's intuitive and efficient features.</p>
+      </div>
       <a href="http://maximilian-kraemer.developerakademie.com/Join/html/login-submit.html" target="_blank">
-        <img src="assets/img/join.png">
-      </a>
-      <p>Join: A powerful JavaScript-based CRM system tailored for businesses. Streamline customer relationships, track interactions, and manage sales effortlessly. Unlock your company's potential with JoinCRM's intuitive and efficient features.</p>
-    </div>
-  </div>
-  <div class="port-container3">
-    <div class="port-img mg-32">
-      <a href="https://ring-of-fire-b68f7.web.app/" target="_blank">
-        <img src="assets/img/RingOfFire.png">
+        <img class="join-img" src="assets/img/join.png" id="port-img">
       </a>
     </div>
-    <div class="port-img">
+
+    <div class="port-container">
       <a href="http://maximilian-kraemer.developerakademie.com/Quiz/quiz.html" target="_blank">
-        <img src="assets/img/quiz.png">
+        <img class="quiz-img" src="assets/img/quiz.png" id="port-img">
       </a>
+      <div class="port-text" id="port-text">
+        <p>Join: A powerful JavaScript-based CRM system tailored for businesses. Streamline customer relationships, track interactions, and manage sales effortlessly. Unlock your company's potential with JoinCRM's intuitive and efficient features.</p>
     </div>
   </div>
+ 
 </section>
+
+
