gsap for portfolio and change favicon

--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -8,10 +8,9 @@
 }
 
 .port-section {
-  padding-top: 50px;
-  padding-left: 150px;
-  padding-right: 150px;
+  padding: 50px 150px 150px 200px;
 }
+
 
 .port-title {
   font-size: 39px;
