implement final dark mode

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="toggle-container">
       <div class="toggle-logo">
-        <img (click)="darkModeService.toggleDarkMode()" src="assets/img/strormtrooper.png" alt="" id="starWarsImg">
+        <img (click)="toggleDarkMode()" [src]="darkModeService.isDarkModeEnabled() ? 'assets/img/strormtrooper.png' : 'assets/img/Vader.png'" alt="Bild" alt="" id="starWarsImg">
       </div>
     </div>
   </div>
