--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,13 @@
+/* Light Mode */
 body {
-  background-color: #000;
-  color: #fff;
+  background-color: #ffffff;
+  color: #000000;
+}
+
+/* Dark Mode */
+.dark-theme {
+  background-color: #000000;
+  color: #ffffff;
 }
 
 p {
