--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -101,12 +101,18 @@ img {
 
 .toggle-logo {
   img {
-    height: 70px;
-    width: 70px;
+    height: 50px;
+    width: 50px;
     cursor: pointer;
     margin-left: 40px;
+
+  }
+  &:hover {
+    transform: scale(1.2);
+    transition: all 0.5s ease;
   }
 }
+
 
 // Themes
 .black {
