implement typed.js for headline

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,6 +11,7 @@
       <a href="#aboutme"><b>About Me</b></a>
       <a href="#skills"><b>Skills</b></a>
       <a href="#portfolio"><b>Portfolio</b></a>
+      <a href="/imprint"><b>Contact</b></a>
     </div>
     <div class="toggle-container">
       <div class="toggle-logo">
