--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -10,11 +10,11 @@
     </div>
 
     <div class="port-container">
-        <div class="port-text" id="port-text">
+        <div class="port-text" id="port-join-text">
           <p>Join: A powerful JavaScript-based CRM system tailored for businesses. Streamline customer relationships, track interactions, and manage sales effortlessly. Unlock your company's potential with JoinCRM's intuitive and efficient features.</p>
       </div>
       <a href="http://maximilian-kraemer.developerakademie.com/Join/html/login-submit.html" target="_blank">
-        <img class="join-img" src="assets/img/join.png" id="port-img">
+        <img class="join-img" src="assets/img/join.png" id="port-join-img">
       </a>
     </div>
 
