some changes for parts of the site

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
   <div class="header-container">
     <div class="logo-container">
       <div class="logo">
-        <p id="logo">MK</p>
+        <p id="logo">MK._</p>
       </div>
     </div>
     <div class="header-link">
