--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,4 +28,16 @@ h3 {
   font-family: 'Quicksand', sans-serif;
   font-family: 'Roboto Condensed', sans-serif;
 }
+h1 {
+    font-family: 'Lato', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Quicksand', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
+  }
+h2 {
+  font-family: 'Lato', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Quicksand', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
+}
 
