--- a/src/app/components/headline/headline.component.scss
+++ b/src/app/components/headline/headline.component.scss
@@ -1,3 +1,11 @@
+body {
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  background: #000000;
+  overflow: hidden;
+}
+
 .headline-container{
     display: flex;
     justify-content: space-between;
