--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,8 +17,15 @@
       <div class="toggle-logo">
         <img (click)="toggleDarkMode()" [src]="darkModeService.isDarkModeEnabled() ? 'assets/img/strormtrooper.png' : 'assets/img/Vader.png'" alt="Bild" alt="" id="starWarsImg">
       </div>
+      <div class="burger-menu-mobile">
+        <span class="material-symbols-outlined" id="burger-menu" style="font-size: 40px">
+          menu
+          </span>
+      </div>
     </div>
   </div>
+
+ 
 </header>
 
 
