--- a/src/app/components/portfolio/portfolio.component.scss
+++ b/src/app/components/portfolio/portfolio.component.scss
@@ -4,11 +4,14 @@
 .port-container3 {
   display: flex;
   justify-content: center;
-  
 }
 
 .port-section {
   padding: 50px 150px 150px 200px;
+  @media screen and (max-width: 800px) {
+    padding:0;
+    padding-bottom: 50px;
+  }
 }
 
 
@@ -25,19 +28,10 @@
   font-size: 45px;
 }
 
-.port-img img {
-  height: 250px;
-  width: 400px;
-  border-radius: .5rem;
-  overflow: hidden;
-  margin-top: 20px;
-  cursor: pointer;
-  transition: 1s ease;
-}
-
-.port-img img:hover {
-  transform: scale(1.1);
-  transition: 0.5s ease-out;
+.loco-img {
+  @media screen and (max-width: 800px) {
+    width: 100%
+  }
 }
 
 .mg-32 {
@@ -47,7 +41,16 @@
 .port-text {
   padding: 0 30px 0 30px;
   padding-top: 8%;
+  @media screen and (max-width: 800px) {
+    padding: 0;
+  }
 
+  p {
+    @media screen and (max-width: 800px) {
+      display: none;
+    }
+
+  }
 }
 
 .loco-img {
@@ -56,34 +59,13 @@
 
 .join-img {
   height: 330px;
+  @media  screen and (max-width: 800px) {
+    width: 100%;
+  }
 }
 .quiz-img {
   height: 300px;
-}
-
-/* Media query for smaller screens */
-@media (max-width: 800px) {
-  .port-container,
-  .port-container2,
-  .port-container3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  .port-section {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .mg-32 {
-    margin-right: 0;
-  }
-
-  .port-img img {
-    width: 350px;
+  @media  screen and (max-width: 800px) {
+    width: 100%;
   }
 }
