--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,4 +40,10 @@ h2 {
   font-family: 'Quicksand', sans-serif;
   font-family: 'Roboto Condensed', sans-serif;
 }
+h4 {
+  font-family: 'Lato', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Quicksand', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
+}
 
