change adress at imprint and change portfolio

--- a/src/app/components/imprint/imprint.component.html
+++ b/src/app/components/imprint/imprint.component.html
@@ -2,8 +2,8 @@
     <h1>Impressum</h1>
     <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
         <p>Maximilian Kraemer<br />
-        Alte Landstraße 30<br />
-        40489 D&uuml;sseldorf</p>
+            D&uuml;sseldorf
+        </p>
 
     <h2>Kontakt</h2>
         <p>E-Mail: maximilian.kraemer@gmx.de</p>
