--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,30 +1,31 @@
 <section class="port-section" id="portfolio">
   <h2 class="port-title">Featured projects</h2>
     <div class="port-container">
-      <a href="http://maximilian-kraemer.developerakademie.com/ElPollo/index.html" target="_blank">
-        <img class="loco-img" src="assets/img/Bildschirmfoto 2023-07-19 um 12.23.05.png" id="port-img">
-      </a>
-      <div class="port-text" id="port-text">
-        <p>El Pollo Loco: is an exciting JavaScript game where you beat a flying chicken, <br> navigate through obstacles, collect points, and conquer the highscore leaderboard. Immerse yourself in this fast-paced chicken adventure!</p>
-      </div>
-    </div>
-
-    <div class="port-container">
-        <div class="port-text" id="port-join-text">
-          <p>Join: A powerful JavaScript-based CRM system tailored for businesses. Streamline customer relationships, track interactions, and manage sales effortlessly. Unlock your company's potential with JoinCRM's intuitive and efficient features.</p>
-      </div>
-      <a href="http://maximilian-kraemer.developerakademie.com/Join/html/login-submit.html" target="_blank">
-        <img class="join-img" src="assets/img/join.png" id="port-join-img">
-      </a>
-    </div>
-
-    <div class="port-container">
-      <a href="http://maximilian-kraemer.developerakademie.com/Quiz/quiz.html" target="_blank">
-        <img class="quiz-img" src="assets/img/quiz.png" id="port-img">
+      <a href="/" target="_blank">
+        <img class="quiz-img" src="assets/img/jerseyShop.png" id="port-img">
       </a>
       <div class="port-text" id="port-text">
         <p>Join: A powerful JavaScript-based CRM system tailored for businesses. Streamline customer relationships, track interactions, and manage sales effortlessly. Unlock your company's potential with JoinCRM's intuitive and efficient features.</p>
     </div>
+     
+    </div>
+
+    <div class="port-container">
+      <div class="port-text" id="port-weather-text">
+        <p>Weather App: Get instant weather updates with our Angular Weather App, <br> powered by OpenWeather API, providing real-time forecasts for any location.
+      </div>
+      <a href="/" target="_blank">
+        <img class="loco-img" src="assets/img/weather.png" id="port-weather-img">
+      </a>
+    </div>
+
+    <div class="port-container">
+      <a href="http://maximilian-kraemer.developerakademie.com/ElPollo/index.html" target="_blank">
+        <img class="loco-img" src="assets/img/el-pollo.png" id="port-img">
+      </a>
+      <div class="port-text" id="port-text">
+        <p>El Pollo Loco: is an exciting JavaScript game where you beat a flying chicken, <br> navigate through obstacles, collect points, and conquer the highscore leaderboard. Immerse yourself in this fast-paced chicken adventure!</p>
+      </div>
   </div>
  
 </section>
