--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -12,7 +12,7 @@
 
     <div class="port-container">
       <div class="port-text" id="port-weather-text">
-        <p>Weather App: Get instant weather updates with our Angular Weather App, <br> powered by OpenWeather API, providing real-time forecasts for any location.
+        <p>Weather App: Get instant weather updates with our Angular Weather App, <br> powered by open-meteo API, providing real-time forecasts for any location.
       </div>
       <a href="/" target="_blank">
         <img class="loco-img" src="assets/img/weather.png" id="port-weather-img">
@@ -21,7 +21,7 @@
 
     <div class="port-container">
       <a href="http://maximilian-kraemer.developerakademie.com/ElPollo/index.html" target="_blank">
-        <img class="loco-img" src="assets/img/el-pollo.png" id="port-img">
+        <img class="loco-img" src="assets/img/elPollo.png" id="port-img">
       </a>
       <div class="port-text" id="port-text">
         <p>El Pollo Loco: is an exciting JavaScript game where you beat a flying chicken, <br> navigate through obstacles, collect points, and conquer the highscore leaderboard. Immerse yourself in this fast-paced chicken adventure!</p>
