styling and change imgs

--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -5,7 +5,8 @@
         <img class="quiz-img" src="assets/img/jerseyShop.png" id="port-img">
       </a>
       <div class="port-text" id="port-text">
-        <p>Join: A powerful JavaScript-based CRM system tailored for businesses. Streamline customer relationships, track interactions, and manage sales effortlessly. Unlock your company's potential with JoinCRM's intuitive and efficient features.</p>
+        <p>Jersey Shop: A WebShop with Angular and Firebase tailored for businesses.</p>
+        <a target="_blank" href="https://github.com/MaxKraemer/jerseyShop"><p>https://github.com/MaxKraemer/jerseyShop</p></a>
     </div>
      
     </div>
@@ -15,7 +16,7 @@
         <p>Weather App: Get instant weather updates with our Angular Weather App, <br> powered by open-meteo API, providing real-time forecasts for any location.
       </div>
       <a href="/" target="_blank">
-        <img class="loco-img" src="assets/img/weather.png" id="port-weather-img">
+        <img class="weather-img" src="assets/img/weather.png" id="port-weather-img">
       </a>
     </div>
 
