angular.json changes and port

--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -6,7 +6,6 @@
       </a>
       <div class="port-text" id="port-text">
         <p>Jersey Shop: A WebShop with Angular and Firebase tailored for businesses.</p>
-        <a target="_blank" href="https://github.com/MaxKraemer/jerseyShop"><p>https://github.com/MaxKraemer/jerseyShop</p></a>
     </div>
      
     </div>
@@ -15,7 +14,7 @@
       <div class="port-text" id="port-weather-text">
         <p>Weather App: Get instant weather updates with our Angular Weather App, <br> powered by open-meteo API, providing real-time forecasts for any location.
       </div>
-      <a href="/" target="_blank">
+      <a href="https://example-weather-location-app.netlify.app/" target="_blank">
         <img class="weather-img" src="assets/img/weather.png" id="port-weather-img">
       </a>
     </div>
