--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -12,9 +12,9 @@
 
     <div class="port-container">
       <div class="port-text" id="port-weather-text">
-        <p>Weather App: Get instant weather updates with our Angular Weather App, <br> powered by open-meteo API, providing real-time forecasts for any location.
+        <p>Weather App: Get instant weather updates with my Angular Weather App, <br> powered by open-meteo and ipgeolocation API get, providing real-time weather for any location.
       </div>
-      <a href="https://example-weather-location-app.netlify.app/" target="_blank">
+      <a href="https://app-weather-exam.netlify.app/" target="_blank">
         <img class="weather-img" src="assets/img/weather.png" id="port-weather-img">
       </a>
     </div>
@@ -24,7 +24,7 @@
         <img class="loco-img" src="assets/img/elPollo.png" id="port-img">
       </a>
       <div class="port-text" id="port-text">
-        <p>El Pollo Loco: is an exciting JavaScript game where you beat a flying chicken, <br> navigate through obstacles, collect points, and conquer the highscore leaderboard. Immerse yourself in this fast-paced chicken adventure!</p>
+        <p>El Pollo Loco: is an exciting JavaScript game where you beat a flying chicken, <br> navigate through obstacles, collect points, and conquer the highscore leaderboard. <br> Immerse yourself in this fast-paced chicken adventure!</p>
       </div>
   </div>
  
