--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,6 +1,6 @@
 <div class="about" id="aboutContainer">
     <div class="about-container" id="aboutme">
-        <h2>< / Developer</h2>
+        <h2> < Developer /></h2>
         </div>
     <div class="aboutContainer">
         <div class="images" id="img">
