--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -215,4 +215,50 @@ img {
     color: #ff6e48;
     text-decoration: underline;
   }
+
+  .sidebar {
+    background-color: #131313;
+    color: #fff;
+    width: 250px;
+    padding: 20px;
+    font-size: 30px;
+    transition: transform 0.5s ease-in-out;
+  }
+  .sidebar a {
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    margin-bottom: 10px;
+  }
+  
+  .sidebar a:hover {
+    text-decoration: underline;
+  }
+  
+  .content {
+    flex: 1;
+    padding: 20px;
+  }
+  
+  .toggle-button {
+    display: none;
+  }
+
+  @media (max-width: 768px) {
+    .sidebar {
+      position: absolute;
+      top: 0;
+      left: 270px;
+      height: 100%;
+      z-index: 999;
+    }
+  
+    .sidebar.open {
+      transform: translateX(250px);
+    }
+  
+    .toggle-button {
+      display: block;
+    }
+  }
 }
